# Wrist-assistant

./: .gitignore  README.md  gif2pngs.py
Wrist-assistant-v0.1/components/MultiButton/: CMakeLists.txt  multi_button.h  multi_button_callback.c  multi_button_callback.h  multi_button_task.c  multi_button_task.h
Wrist-assistant-v0.1/components/bsp_driver/: CMakeLists.txt  bsp_i2c.c  bsp_i2c.h  bsp_key.c  bsp_key.h  bsp_ledc.c  bsp_ledc.h  bsp_power.c  bsp_power.h
Wrist-assistant-v0.1/components/lvgl/: CMakeLists.txt  lv_conf.h
Wrist-assistant-v0.1/components/lvgl/lv_gif/: lv_gif.c
Wrist-assistant-v0.1/components/lvgl/lvgl/: lvgl.h
Wrist-assistant-v0.1/components/lvgl/lvgl_port/: lv_port_fs.c  lvgl_port.c
Wrist-assistant-v0.1/components/lvgl/lvgl_port/include/: lv_port_fs.h  lvgl_port.h
Wrist-assistant-v0.1/components/lvgl_project/: CMakeLists.txt  lvgl_project.c  lvgl_project.h
Wrist-assistant-v0.1/components/lvgl_project/font/: CMakeLists.txt  font.c  font.h  font_ZiDing_K8_12.c  font_ZiDing_K8_16.c  font_ZiDing_K8_24.c  font_acsii_12.c  font_acsii_16.c  font_acsii_32.c  font_acsii_48.c
Wrist-assistant-v0.1/components/lvgl_project/image/: bmp_BeiJing.c  bmp_BeiJing_BaiTian.c  bmp_DingWei.c  bmp_Du.c  bmp_RiChuRiLuo.c
Wrist-assistant-v0.1/components/lvgl_project/image/bmp_ShuaXin/: bmp_ShuaXin.c  bmp_ShuaXin.h  bmp_ShuaXin_0.c  bmp_ShuaXin_1.c  bmp_ShuaXin_10.c  bmp_ShuaXin_11.c  bmp_ShuaXin_12.c  bmp_ShuaXin_13.c  bmp_ShuaXin_14.c  bmp_ShuaXin_15.c  bmp_ShuaXin_2.c  bmp_ShuaXin_3.c  bmp_ShuaXin_4.c  bmp_ShuaXin_5.c  bmp_ShuaXin_6.c  bmp_ShuaXin_7.c  bmp_ShuaXin_8.c  bmp_ShuaXin_9.c
Wrist-assistant-v0.1/components/lvgl_project/image/bmp_tianqi_40x40/: bmp_tianqi_40x40.c  bmp_tianqi_40x40.h  bmp_tianqi_40x40_0.c  bmp_tianqi_40x40_1.c  bmp_tianqi_40x40_10.c  bmp_tianqi_40x40_11.c  bmp_tianqi_40x40_12.c  bmp_tianqi_40x40_13.c  bmp_tianqi_40x40_14.c  bmp_tianqi_40x40_15.c  bmp_tianqi_40x40_16.c  bmp_tianqi_40x40_17.c  bmp_tianqi_40x40_18.c  bmp_tianqi_40x40_19.c  bmp_tianqi_40x40_2.c  bmp_tianqi_40x40_20.c  bmp_tianqi_40x40_21.c  bmp_tianqi_40x40_22.c  bmp_tianqi_40x40_23.c  bmp_tianqi_40x40_24.c  bmp_tianqi_40x40_25.c  bmp_tianqi_40x40_26.c  bmp_tianqi_40x40_27.c  bmp_tianqi_40x40_28.c  bmp_tianqi_40x40_29.c  bmp_tianqi_40x40_3.c  bmp_tianqi_40x40_30.c  bmp_tianqi_40x40_31.c  bmp_tianqi_40x40_32.c  bmp_tianqi_40x40_33.c  bmp_tianqi_40x40_34.c  bmp_tianqi_40x40_35.c  bmp_tianqi_40x40_36.c  bmp_tianqi_40x40_37.c  bmp_tianqi_40x40_38.c  bmp_tianqi_40x40_4.c  bmp_tianqi_40x40_5.c  bmp_tianqi_40x40_6.c  bmp_tianqi_40x40_7.c  bmp_tianqi_40x40_8.c  (+2 more)
Wrist-assistant-v0.1/components/lvgl_project/image/bmp_tianqi_80x80/: bmp_tianqi_80x80.c  bmp_tianqi_80x80.h  bmp_tianqi_80x80_0.c  bmp_tianqi_80x80_1.c  bmp_tianqi_80x80_10.c  bmp_tianqi_80x80_11.c  bmp_tianqi_80x80_12.c  bmp_tianqi_80x80_13.c  bmp_tianqi_80x80_14.c  bmp_tianqi_80x80_15.c  bmp_tianqi_80x80_16.c  bmp_tianqi_80x80_17.c  bmp_tianqi_80x80_18.c  bmp_tianqi_80x80_19.c  bmp_tianqi_80x80_2.c  bmp_tianqi_80x80_20.c  bmp_tianqi_80x80_21.c  bmp_tianqi_80x80_22.c  bmp_tianqi_80x80_23.c  bmp_tianqi_80x80_24.c  bmp_tianqi_80x80_25.c  bmp_tianqi_80x80_26.c  bmp_tianqi_80x80_27.c  bmp_tianqi_80x80_28.c  bmp_tianqi_80x80_29.c  bmp_tianqi_80x80_3.c  bmp_tianqi_80x80_30.c  bmp_tianqi_80x80_31.c  bmp_tianqi_80x80_32.c  bmp_tianqi_80x80_33.c  bmp_tianqi_80x80_34.c  bmp_tianqi_80x80_35.c  bmp_tianqi_80x80_36.c  bmp_tianqi_80x80_37.c  bmp_tianqi_80x80_38.c  bmp_tianqi_80x80_4.c  bmp_tianqi_80x80_5.c  bmp_tianqi_80x80_6.c  bmp_tianqi_80x80_7.c  bmp_tianqi_80x80_8.c  (+3 more)
Wrist-assistant-v0.1/components/lvgl_project/image/gif/: bmp_KaiJi_000.c  bmp_KaiJi_001.c  bmp_KaiJi_0010.c  bmp_KaiJi_0011.c  bmp_KaiJi_0012.c  bmp_KaiJi_0013.c  bmp_KaiJi_0014.c  bmp_KaiJi_0015.c  bmp_KaiJi_0016.c  bmp_KaiJi_0017.c  bmp_KaiJi_0018.c  bmp_KaiJi_0019.c  bmp_KaiJi_002.c  bmp_KaiJi_0020.c  bmp_KaiJi_0021.c  bmp_KaiJi_0022.c  bmp_KaiJi_0023.c  bmp_KaiJi_0024.c  bmp_KaiJi_0025.c  bmp_KaiJi_0026.c  bmp_KaiJi_0027.c  bmp_KaiJi_0028.c  bmp_KaiJi_0029.c  bmp_KaiJi_003.c  bmp_KaiJi_0030.c  bmp_KaiJi_0031.c  bmp_KaiJi_0032.c  bmp_KaiJi_0033.c  bmp_KaiJi_0034.c  bmp_KaiJi_0035.c  bmp_KaiJi_0036.c  bmp_KaiJi_0037.c  bmp_KaiJi_0038.c  bmp_KaiJi_0039.c  bmp_KaiJi_004.c  bmp_KaiJi_005.c  bmp_KaiJi_006.c  bmp_KaiJi_007.c  bmp_KaiJi_008.c  (+1 more)
Wrist-assistant-v0.1/components/lvgl_project/lvgl_SheZhi/: lvgl_SheZhi.c  lvgl_SheZhi.h  lvgl_SheZhi_anim.c  lvgl_SheZhi_anim.h
Wrist-assistant-v0.1/components/lvgl_project/lvgl_ShuaXin/: lvgl_ShuaXin.c  lvgl_ShuaXin.h
Wrist-assistant-v0.1/components/lvgl_project/lvgl_Some_style/: lvgl_style.c  lvgl_style.h
Wrist-assistant-v0.1/components/lvgl_project/lvgl_TianQi/: lvgl_TianQi.c  lvgl_TianQi.h
Wrist-assistant-v0.1/components/lvgl_project/lvgl_bilibili/: lvgl_bilibili.c  lvgl_bilibili.h  lvgl_bilibili_anim.c  lvgl_bilibili_anim.h
Wrist-assistant-v0.1/components/lvgl_project/lvgl_bpm/: lvgl_bpm.c  lvgl_bpm.h
Wrist-assistant-v0.1/components/lvgl_project/lvgl_chulizhong/: lvgl_chulizhong.c  lvgl_chulizhong.h  lvgl_chulizhong_anim.c  lvgl_chulizhong_anim.h
Wrist-assistant-v0.1/components/lvgl_project/lvgl_clock/: lvgl_clock.c  lvgl_clock.h
Wrist-assistant-v0.1/components/lvgl_project/lvgl_global/: lvgl_global.c  lvgl_global.h
Wrist-assistant-v0.1/components/lvgl_project/lvgl_heart/: lvgl_heart.c  lvgl_heart.h  lvgl_heart_anim.c  lvgl_heart_anim.h
Wrist-assistant-v0.1/components/lvgl_project/lvgl_hint/: lvgl_hint.c  lvgl_hint.h  lvgl_hint_anim.c  lvgl_hint_anim.h
Wrist-assistant-v0.1/components/lvgl_project/lvgl_shurufa/: lvgl_shurufa.c  lvgl_shurufa.h  lvgl_shurufa_anim.c  lvgl_shurufa_anim.h
Wrist-assistant-v0.1/components/my_https/: CMakeLists.txt  https.c  https.h  https_chengshi.c  https_chengshi.h  https_ip.c  https_ip.h  https_kongqi.c  https_kongqi.h  https_riluo.c  https_riluo.h  https_shijian.c  https_shijian.h  https_tianqi.c  https_tianqi.h  user_http_s.c  user_http_s.h
Wrist-assistant-v0.1/components/my_spiffs/: CMakeLists.txt  my_spiffs.c  my_spiffs.h
(+63 files in other folders)
