#添加头文件目录
idf_component_register(
    SRC_DIRS
    "."
    "font"
    "lvgl_bpm"
    "lvgl_Some_style"
    "lvgl_global"
    "lvgl_clock"
    "lvgl_ShuaXin"
    "lvgl_hint"
    "lvgl_TianQi"
    "lvgl_SheZhi"
    "lvgl_SheZhi/lvgl_SheZhi_wifi"
    "lvgl_SheZhi/lvgl_SheZhi_yuyan"
    "lvgl_shurufa"
    "lvgl_chulizhong"
    "image"
    "image/bmp_ShuaXin"
    "image/bmp_tianqi_40x40"
    "image/bmp_tianqi_80x80"
    "image/gif"


    INCLUDE_DIRS
    "."
    "font"
    "lvgl_bpm"
    "lvgl_Some_style"
    "lvgl_global"
    "lvgl_clock"
    "lvgl_ShuaXin"
    "lvgl_hint"
    "lvgl_TianQi"
    "lvgl_SheZhi"
    "lvgl_SheZhi/lvgl_SheZhi_wifi"
    "lvgl_SheZhi/lvgl_SheZhi_yuyan"
    "lvgl_shurufa"
    "lvgl_chulizhong"
    "image"
    "image/bmp_ShuaXin"
    "image/bmp_tianqi_40x40"
    "image/bmp_tianqi_80x80"
    "image/gif"

    REQUIRES lvgl main my_system json wpa_supplicant)
